# skellysnapshot

./: README.md  pyproject.toml
skellysnapshot/: __init__.py  camera_to_pose_test.py  constants.py  main.py  mediapipe_processing.py  mediapipe_videotest.py  task_worker_thread.py
skellysnapshot/backend/: constants.py  snapshot_analyzer.py  task_worker_thread.py
skellysnapshot/backend/calibration/: anipose_object_loader.py  freemocap_anipose.py
skellysnapshot/backend/center_of_mass/: calculate_center_of_mass.py  center_of_mass_dataclass.py
skellysnapshot/backend/pose_estimation_2d/: run_mediapipe.py  snapshot_data_2d_dataclass.py
skellysnapshot/backend/reconstruction_3d/: reconstruct_3d.py  snapshot_3d_dataclass.py
skellysnapshot/backend/visualize_3d/: create_3d_figure.py  mediapipe_bone_connections.py
skellysnapshot/backend/warmup/: anipose_warmup.py  dummy_calibration.toml
skellysnapshot/calibration/: anipose_object_loader.py
skellysnapshot/cameras/: camera_test.py
skellysnapshot/center_of_mass/: calculate_center_of_mass.py
skellysnapshot/experiments/: camera_to_pose_test.py
skellysnapshot/experiments/cameras/: camera_test.py
skellysnapshot/gui/: app_state.py  gui_main.py  main_gui.py  stylesheet.css
skellysnapshot/gui/helpers/: app_state_manager.py  layout_manager.py  queue_manager.py  results_ordering_manager.py  run_snapshot_analysis.py  (+2 more)
skellysnapshot/reconstruction_3d/: reconstruct_3d.py  snapshot_3d_dataclass.py  snapshot_data_3d_dataclass.py
skellysnapshot/visualize_3d/: create_3d_figure.py  mediapipe_bone_connections.py
(+23 files in other folders)
