[tool.poetry]
name = "skellysnapshot"
version = "0.1.0"
description = ""
authors = ["aaroncherian <aaron.cherian2@gmail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <3.12"
skellycam = { git = "https://github.com/freemocap/skellycam.git", rev = "development" }
pyside6 = "^6.6.0"
toml = "^0.10.2"
aniposelib = "^0.4.3"
mediapipe = "^0.10.7"
skelly_tracker = { git = "https://github.com/freemocap/skelly_tracker.git", branch = "philip/record_tracked_objects" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
